# compute-cost-simulator

./: CODEX_PROMPT.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
ccs/: __init__.py  budget.py  config.yaml  cost_model.py  llm.py  reports.py  tracker.py
compute_cost_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
curriculum/: README.md
dashboard/: app.py
examples/: README.md  budget_challenge_demo.py  flagship_budget_failure_demo.py  hyperparameter_explosion_demo.py  intro_modeling_demo.py  llm_token_demo.py  rag_cost_burn_demo.py  realistic_usage_scenarios_demo.py  scaling_inference_demo.py  token_burn_demo.py  vibe_coding_cost_demo.py
prompts/: 00_project_context.md  01_build_core.txt  02_add_tests.txt  03_expand_examples.txt  04_improve_readme.txt  05_add_dashboard.txt  08_add_flagship.txt  09_reorganize_core_learning.txt  10_align_student_facing.txt  13_clean_discussions.txt  15_add_streamlit_depend.txt  16_fix_ai_costs.txt  17_upgrade_dashboard.txt  18_clean_text.txt  19_fix_streamlit.txt  20_add_real_life_example.txt  22_add_realistic_usage.txt  23_add_scenario_comparison.txt  24_add_estimation_api.txt  25_add_budget_enforcement.txt  26_add_flagship_assignment.txt  99_review_and_refactor.txt
teaching/: assignment_template.md  cost_aware_model_selection_assignment.md  discussion_prompts.md  genai_guidelines.md  reflection_questions.md  rubric.md
tests/: test_budget.py  test_cost_model.py  test_llm.py  test_reports.py  test_tracker.py
